Archive2/12/aead5652875bd7/output
main.cpp: In member function 'Element SafeArray<Element>::get(int) const':
main.cpp:46:13: error: 'cout' was not declared in this scope
             cout << "error";
             ^
main.cpp: In member function 'void SafeArray<Element>::set(int, Element)':
main.cpp:56:13: error: 'cout' was not declared in this scope
             cout << "error";
             ^
